--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,9 @@
 :host {
-  display: block;
+  display: flex;
   min-height: 100vh;
+  width: 100%;
+  justify-content: center;
+  align-items: start;
   background: url(../assets/kristi-martin--c017F-rzew-unsplash.jpg);
-
 }
+
