--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -1,27 +1,26 @@
 :host {
-  display: block;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  display: flex;
   .container {
-    width: 768px;
-    margin: 0 auto 0;
+    margin-top: 2em;
     background-color: rgba(0, 0, 0, 0.3);
-    padding: 1em;
-    border-radius: 3px;
+    border-radius: 16px;
+    width: 320px;
     display: flex;
+    padding: 1em;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     h1, h2{
       margin-top: 0;
       color: #183246;
+      font-size: 32px;
       font-family: "Nunito", sans-serif;
       font-weight: 600;
     }
     button {
       margin-bottom: 1em;
+      width: 100%;
       height: 2.5em;
-      width: 10em;
       border: none;
       border-radius: 8px;
       background-color: #FCDDD8;
@@ -32,9 +31,17 @@
     }
 
     main {
+      width: 100%;
       display: grid;
-      grid-template-columns: 150px 150px 150px;
-      grid-gap: 0;
+      grid-template-columns: repeat(3, 1fr);
+      grid-auto-rows: minmax(100px, auto);
+      grid-gap: 0.6em;
     }
   }
+}
+
+@media screen and (min-width: 600px){
+    .container {
+      min-width: 550px;
+    }
 }
