--- a/src/app/square/square.component.scss
+++ b/src/app/square/square.component.scss
@@ -1,11 +1,10 @@
 :host {
-  position: relative;
+  width: 100%;
+  display: flex;
   h1 {
     margin: 0;
-    position: absolute;
     width: 100%;
     height: 100%;
-    padding: 4px;
     box-sizing: border-box;
   }
 
@@ -20,6 +19,7 @@ button {
   height: 100%;
   outline: none;
   border: none;
+  border-radius: 8px;
   font-size: 2em;
   font-family: sans-serif;
   cursor: pointer;
