--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,15 +1,11 @@
 <div class="container">
   <h1>Current Player: {{ player }}</h1>
-
-  <button (click)="newGame()">Start new Game</button>
-
-  <h2 *ngIf="winner">Player {{ winner }} won the game!</h2>
-
+  <button (click)="newGame()">Start Game</button>
   <main>
     <app-square
       *ngFor="let val of squares; let i = index"
       [value]="val"
-      [finished]="!!winner"
+      [finished]="winner === true"
       (click)="makeMove(i)"
     >
     </app-square>
