--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,11 @@
+@import '~@taiga-ui/core/styles/taiga-ui-local';
+
 :host {
   display: flex;
   min-height: 100vh;
   width: 100%;
   justify-content: center;
-  align-items: start;
+  align-items: center;
   background: url(../assets/kristi-martin--c017F-rzew-unsplash.jpg);
 }
 
