--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -1,8 +1,8 @@
+@import '~@taiga-ui/core/styles/taiga-ui-local';
 :host {
   display: flex;
   justify-content: center;
   .container {
-    margin-top: 2em;
     background-color: rgba(0, 0, 0, 0.3);
     border-radius: 16px;
     width: 320px;
@@ -12,7 +12,7 @@
     justify-content: space-around;
     align-items: center;
     h1, h2{
-      margin-top: 0.5em;
+      margin-top: 0.3em;
       color: #183246;
       font-size: 32px;
       font-family: "Nunito", sans-serif;
